# NYUAD-Team-12

./: ArabianGhezzel_WeeklyTimestamps_2007to2024.xlsx  Quantum_SVR.ipynb  README.md  pyproject.toml  qsvr_2-Copy1.ipynb  qsvr_2.ipynb  requirements.txt
.ipynb_checkpoints/: qsvr_2-checkpoint.ipynb
Qbraid module/: nyuad_2025_demo.ipynb
