[project]
name = "nyuad-team-12"
version = "0.1.0"
description = "As part of NYUAD Hackathon for social good 2025, we create a method to predicdt extension pre-emptively using QRNNs!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pennylane>=0.30.0",
    "qbraid==0.9.6.dev20250425155658",
    "qiskit>=0.43.0",
    "seaborn>=0.12.0",
    "uv>=0.1.0",
]
